Using px instead of % for the width to ensure that the sprites do not get too large when you search up a pokemon

--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ input{
 }
 
 #buttonSprite{
-    width: 50%;
+    width: 40px;
     height: auto;
 }
 
